# Binnair_Automated_Trading_v1.0.0

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.engine  PERSISTENCE.md  README.md  compose.trading.yml  pyproject.toml
.github/workflows/: trading-api-image.yml  trading-engine-image.yml
config/: config.yaml  config.yaml.example
docs/: API_FRONTEND.md  API_REFERENCE.md  PERSISTENCE.md  RISK_FIRST_DIRECTION.md  TIMESFM.md  TRADING_HISTORY_API.md  UI_CONTROL_GUIDE.md  WEBSOCKET_API.md
key/: test-key.txt
scripts/: download_timesfm_weights.py  ingest_ohlcv.py  init_db.py  run_api.py  run_engine.py  sample_inference.py  sample_run.py  verify_mvp.py
src/binnair_trading_engine/: __init__.py
src/binnair_trading_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/binnair_trading_engine/api/: __init__.py  db.py  deps.py  dto.py  main.py  mappers.py  performance_repository.py  repository.py  routes.py  wallet_service.py
src/binnair_trading_engine/app/: __init__.py  bootstrap.py  main.py
src/binnair_trading_engine/autopilot/: __init__.py  calibration.py  controller.py  models.py  persist.py  regime.py
src/binnair_trading_engine/config/: __init__.py  env_loader.py  runtime_config.py  runtime_loader.py  settings.py
src/binnair_trading_engine/domain/: __init__.py  models.py
src/binnair_trading_engine/engine/: __init__.py  core.py  entry_pipeline.py  runtime_control.py
src/binnair_trading_engine/exchange/: __init__.py  binance_endpoints.py  binance_futures.py  binance_listen_key.py  binance_spot.py  binance_stream_parser.py  interface.py  paper.py
src/binnair_trading_engine/infra/: __init__.py  timezone.py
src/binnair_trading_engine/market_data/: __init__.py  binance_rest.py  history.py  interface.py  ohlcv_ingest.py  timeframe.py
src/binnair_trading_engine/risk/: checker.py  (+4 more)
tests/: test_autopilot_calibration.py  test_dust_trade_filter.py  test_engine_flow.py  test_entry_pipeline.py  test_high_vol_entry_tighten.py  test_signal_policy.py  test_timesfm_predictor.py  test_timesfm_utils.py
(+60 files in other folders)
