[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binnair-trading-engine"
version = "1.0.0"
description = "BinnAIR Automated Trading Engine - Paper/Real trading execution engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "BinnAIR" }]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "torch>=2.0",
    "timesfm[torch]",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
binnair-engine = "binnair_trading_engine.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
